apps/app-1/base/route-weighted.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: app-1-something-weighted
  namespace: app-1
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
    namespace: gateway
  hostnames:
  - "app-1.gateway.american-broomstick.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /weighted
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - kind: Service
      name: something-v1-0-0
      namespace: app-1
      port: 8080
      weight: 70
    - kind: Service
      name: something-v1-1-0
      namespace: app-1
      port: 8080
      weight: 30
